# agents-smith

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml  template-config.yaml
.github/workflows/: ci.yml  dependency-review.yml  pypi-publish.yml  tag-release.yml
adr/: ADR_20260501_hexagonal-architecture.md  ADR_20260501_no-smart-merge.md
api/: index.html  search.js  smith.html
api/smith/: application.html  data.html  delivery.html  domain.html  infrastructure.html
api/smith/application/: connect.html  disconnect.html  status.html  update.html
api/smith/delivery/: cli.html
api/smith/domain/: connection.html  ports.html  value_objects.html
api/smith/infrastructure/: filesystem.html  gitignore.html  metadata.html  template_source.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_325303a1d70b4ae1___init___py.html  z_325303a1d70b4ae1_filesystem_py.html  z_325303a1d70b4ae1_gitignore_py.html  z_325303a1d70b4ae1_metadata_py.html  z_325303a1d70b4ae1_template_source_py.html  z_82fc2cff351a793d___init___py.html  z_ba73a4fa55ffc4d4___init___py.html  z_ba73a4fa55ffc4d4_cli_py.html  z_bedd767b2ca26283___init___py.html  z_bedd767b2ca26283___main___py.html  z_e26ff8a866316dfe___init___py.html  z_e26ff8a866316dfe_connection_py.html  z_e26ff8a866316dfe_ports_py.html  z_e26ff8a866316dfe_value_objects_py.html  z_fd662dfab4a8a820___init___py.html  z_fd662dfab4a8a820_connect_py.html  z_fd662dfab4a8a820_disconnect_py.html  z_fd662dfab4a8a820_status_py.html  z_fd662dfab4a8a820_update_py.html
docs/: branding.md  discovery.md  discovery_journal.md  glossary.md  index.html  scope_journal.md  system.md
docs/adr/: ADR-2026-04-22-version-source.md  ADR_20260501_argparse-cli-framework.md  ADR_20260501_atomic-file-writes-via-temp-directory.md  ADR_20260501_github-bundled-template-resolution.md  ADR_20260501_local-bundled-template-resolution.md  ADR_20260501_smith-yaml-metadata.md  ADR_20260502_allowed-topics-as-safety-boundary.md  ADR_20260502_archive-prefix-stripping.md  ADR_20260502_cli-argparse.md  ADR_20260502_direct-file-writes.md  ADR_20260502_flat-module-structure.md  ADR_20260502_gitignore-section-markers.md  ADR_20260502_overwrite-protection.md  ADR_20260502_source-resolution-priority.md
docs/branding/: branding.md
docs/features/: allowed_topics_filter.feature  clone.feature  fetch.feature  gitignore_management.feature  purge.feature  source_resolution.feature
docs/features/backlog/: smith-assimilate.feature  smith-commands.feature  smith-new.feature
docs/features/completed/: cli-entrypoint.feature
docs/interview-notes/: IN_20260501_smith-commands-specification.md  IN_20260501_stakeholder-reinterview.md  IN_20260501_temple8-dependency-resolution.md  IN_20260502_initial-discovery.md
docs/post-mortem/: PM_20260501_missing-overwrite-flag.md  PM_20260501_moscow-gherkin-tags.md
docs/spec/: context_map.md  domain_model.md  glossary.md  product_definition.md  system.md  technical_design.md
interview-notes/: IN_20260422_scope-discovery.md  IN_20260501_local-bundle-reversal.md
post-mortem/: PM_20260501_conflict-exit-code-removal.md  PM_20260501_coverage-test-in-features-folder.md  PM_20260501_missing-feature-test-template.md  PM_20260501_reviewer-fixing-code.md  PM_20260501_se-dirtying-living-docs.md
scripts/: flowr-utils.sh  generate-flowviz-data.py  generate-svg.sh  update-bundle.sh
smith/: __init__.py  __main__.py  cli.py  core.py  gitignore.py
smith/application/: __init__.py  connect.py  disconnect.py  status.py  update.py
smith/data/: AGENTS.md  __init__.py
smith/data/.flowr/flows/: delivery-flow.yaml  review-gate-flow.yaml
smith/data/.flowr/sessions/: current.yaml
smith/data/.opencode/knowledge/requirements/: gherkin.md  wsjf.md
smith/data/.opencode/knowledge/software-craft/: tdd.md  test-design.md  versioning.md
smith/data/.opencode/skills/accept-feature/: SKILL.md
smith/data/.opencode/skills/analyze-root-cause/: SKILL.md
smith/data/.opencode/skills/assess-architecture/: SKILL.md
smith/data/.opencode/skills/break-down-feature/: SKILL.md
smith/data/.opencode/skills/commit-implementation/: SKILL.md
smith/data/.opencode/skills/conduct-interview/: SKILL.md
smith/data/.opencode/skills/confirm-baseline/: SKILL.md
smith/data/.opencode/skills/create-pr/: SKILL.md
smith/data/.opencode/skills/create-py-stubs/: SKILL.md
smith/data/.opencode/skills/decide-batch-action/: SKILL.md
smith/data/.opencode/skills/define-done/: SKILL.md
smith/data/.opencode/skills/define-product-scope/: SKILL.md
smith/data/.opencode/skills/define-ubiquitous-language/: SKILL.md
smith/data/.opencode/skills/design-assets/: SKILL.md
smith/data/.opencode/skills/design-colors/: SKILL.md
smith/data/.opencode/skills/design-technical-solution/: SKILL.md
smith/data/.opencode/skills/determine-action-items/: SKILL.md
smith/data/.opencode/skills/document-post-mortem/: SKILL.md
smith/data/.opencode/skills/draft-adr/: SKILL.md
smith/data/.opencode/skills/extract-lessons/: SKILL.md
smith/delivery/: __init__.py  cli.py
smith/domain/: __init__.py  connection.py  ports.py  value_objects.py
smith/infrastructure/: __init__.py  filesystem.py  gitignore.py  metadata.py  template_source.py
spec/: glossary.md  product_definition.md  system.md
tests/: report.html  test_cli.py  test_core.py  test_gitignore.py
tests/features/: test_allowed_topics_filter.py  test_clone.py  test_fetch.py  test_gitignore_management.py  test_purge.py  test_source_resolution.py
tests/features/cli_entrypoint/: help_output_test.py  unrecognised_arguments_test.py  version_output_test.py
tests/features/smith_commands/: __init__.py  conftest.py  connect_fresh_project_test.py  disconnect_test.py  skip_user_tracked_test.py  status_test.py  update_test.py
tests/unit/: app_test.py  main_test.py
tests/unit/delivery/: __init__.py
tests/unit/domain/: test_connection.py
tests/unit/infrastructure/: filesystem_test.py  gitignore_test.py  metadata_test.py  template_source_test.py
(+20 files in other folders)
