[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-smith"
version = "1.0.0"
description = "Clone AI agent configurations into any project"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "eol", email = "nullhack@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32",
]

[project.scripts]
smith = "smith.__main__:main"

[project.urls]
Repository = "https://github.com/nullhack/agents-smith"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
    "taskipy>=1.14.1",
    "pyright>=1.1.400",
]

[tool.setuptools.packages.find]
include = ["smith*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.taskipy.tasks]
lint = "ruff check . && ruff format --check ."
ruff-check = "ruff check ."
ruff-format-check = "ruff format --check ."
static-check = "python -m pyright smith/"
test = "python -m pytest tests/ --tb=short -q"
test-fast = "python -m pytest tests/ --tb=short -q -m 'not slow'"
release-check = "python -m pytest tests/ --tb=short -q && ruff check . && ruff format --check ."
doc-build = "python -c \"print('doc-build placeholder')\""
doc-publish = "python -c \"print('doc-publish placeholder')\""